--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="index.css">
+        <title>Home</title>
     </head>
     <body>
-
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
+        <div class="navbar">
+            <a href="index.html" style = "background: #520003; color: #FFEFCB; font-weight: bold;">Home</a>
+            <a href="solar_energy.html">Menu</a>
+            <a href="wind_energy.html">Contact</a>
+            <a href="hydroelectric_energy.html">About Us</a>
+            <a href="conservation.html">Documentation</a>
+        </div>
+    <br>
+    <br>
+    <h1>Piazza's Parlor</h1>
+    
+    <h2>Our Mission</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
     </body>
 </html>
-
