testing text size again

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <body>
         <div class="navbar">
             <a href="index.html" style = "background: #520003; color: #FFEFCB; font-weight: bold;">Home</a>
-            <a href="solar_energy.html">Menu</a>
-            <a href="wind_energy.html">Contact</a>
-            <a href="hydroelectric_energy.html">About Us</a>
-            <a href="conservation.html">Documentation</a>
+            <a href="menu.html">Menu</a>
+            <a href="contact.html">Contact</a>
+            <a href="about_us.html">About Us</a>
+            <a href="documentation.html">Documentation</a>
         </div>
     <br>
     <br>
