finished main structure of the homepage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
   <body>
     <div class="navbar">
-        <a href="index.html" style = "background: #520003; color: #FFEFCB; font-weight: bold;">Home</a>
+        <a href="index.html" style = "background: #b74d51; color: #FFEFCB; font-weight: bold;">Home</a>
         <a href="menu.html">Menu</a>
         <a href="contact.html">Contact</a>
         <a href="about_us.html">About Us</a>
@@ -22,12 +22,12 @@
     
     <br>
     <br>
-    <!--testing something I found-->
+
     <section class="diagonal">
         <div class="wrapper">
 
-          <h2 class="section-title">Our Mission</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h2 class="section-title">Our Mission</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
         </div>
       </section>
@@ -68,5 +68,23 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
     </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <h2 class="section-title">Our Process</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <footer>
+        <p>This page was created and maintained by the EHS TSA chapter</p>
+    </footer>
   </body>
 </html>
