--- a/contact.html
+++ b/contact.html
@@ -139,5 +139,5 @@ p {
 
 
     <!--Submit Button-->
-    <button type="button" class="btn btn-outline-primary">Submit</button>
+    <button class="refresh-button">Submit</button>
     
