--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
     </head>
   <body>
     <div class="navbar">
-        <a href="index.html" style = "background: #b74d51; color: #FFEFCB; font-weight: bold;">Home</a>
+        <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html" style = "background: #b74d51; color: #FFEFCB; font-weight: bold;">Contact</a>
         <a href="about_us.html">About Us</a>
         <a href="documentation.html">Documentation</a>
     </div>
@@ -129,7 +129,6 @@ p {
         <h4><input type="checkbox" name="section" value="Something Else">Something Else</h4>
 
       </div>
-    
 
     <br>
     <!-- Complaint Details-->
@@ -140,4 +139,6 @@ p {
 
     <!--Submit Button-->
     <button class="refresh-button">Submit</button>
-    
+    </div>
+  </form>
+</body>
