--- a/menu.html
+++ b/menu.html
@@ -1,13 +1,87 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="menu.css">
         <title>Menu</title>
     </head>
-    <body>
+  <body>
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="menu.html" style = "background: #b74d51; color: #FFEFCB; font-weight: bold;">Menu</a>
+        <a href="contact.html">Contact</a>
+        <a href="about_us.html">About Us</a>
+        <a href="documentation.html">Documentation</a>
+    </div>
+
+    <br>
+    <br>
 
     <h1>Menu</h1>
     
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <br>
+    <br>
 
-    </body>
+    <footer>
+        <p>This page was created and maintained by the EHS TSA chapter</p>
+    </footer>
+  </body>
 </html>
+
+<!--
+Menu ideas I stole make sure I change names:
+FIOR DI LATTE
+Madagascar Vanilla Bean
+BELGIAN CHOCOLATE
+STRAWBERRY
+CIOCCOLATO ALLA MENTA
+Mint & Chocolate
+STRACCIATELLA
+Vanilla & Chocolate
+GIANDUJA
+Hazelnut & Chocolate (*Contains tree nuts*)
+ESPRESSO
+Made with Lavazza Espresso
+PISTACCHIO
+(*Contains tree nuts*)
+CARAMELLO
+Salted Caramel
+GINGERBREAD
+(*Contains Gluten*)
+CANNELLA
+Cinnamon
+OLIVE OIL & FIG
+Black Mission figs & Cold pressed Spanish Extra Virgin Olive Oil
+CRÈME BRÛLÉE featuring FLORENTINE CREAM GELATO
+Madagascar Vanilla Bean & Orange Zest (*Contains egg*)
+DAIRY FREE BELGIAN CHOCOLATE
+(*Dairy Free *Vegan *Contains tree nuts)
+MATCHA COCONUT
+(*Dairy Free *Vegan *Contains tree nuts)
+PASSIONFRUIT & MANGO SORBET
+(*Dairy Free *Vegan)
+LIMONE (LEMON) SORBET
+(*Dairy Free *Vegan)
+
+Coffee and Espresso Drinks
+Get your caffeine fix just the way you like it.
+
+Americano
+Espresso shots combined with hot water for a more traditionally American cup of coffee
+
+Caffe' Latte
+Espresso shots with steamed milk and little foam. Add your favorite flavor shots
+
+Caffe' Mocha
+Espresso shots combined with steamed milk and rich chocolate syrup
+
+Cappucinno
+Espresso shots with steamed milk and foam. Top with cinnamon or cocoa
+
+Iced or Frozen Latte
+Espresso served over or blended with ice. Add chocolate, caramel or any flavor shot
+
+Hot Chocolate
+Not the weak watered-down version. Our hot chocolate is made with  real cocoa and steamed milk
+-->
