worked on menu page

--- a/menu.html
+++ b/menu.html
@@ -18,13 +18,53 @@
     <br>
     <br>
 
-    <h1>Menu</h1>
+    <h1 style = "font-size: 50px;" >Menu</h1>
     
     <br>
     <br>
+    <h2 style = "margin-left: 15em;" class="section-title">Gelato Flavours</h2>
+    <div  class = "menu">
+      <p>
+        FIOR DI LATTE
+        <br><br>
+        BELGIAN CHOCOLATE
+        <br><br>
+        STRAWBERRY
+        <br><br>
+        CIOCCOLATO ALLA MENTA
+        <br><br>
+        STRACCIATELLA
+        <br><br>
+        GIANDUJA
+        <br><br>
+        ESPRESSO
+        <br><br>
+        PISTACCHIO
+        <br><br>
+        CARAMELLO
+        <br><br>
+        GINGERBREAD
+        <br><br>
+        CANNELLA
+        <br><br>
+        OLIVE OIL & FIG
+        <br><br>
+        CRÈME BRÛLÉE
+        <br><br>
+        DAIRY FREE BELGIAN CHOCOLATE
+        <br><br>
+        MATCHA COCONUT
+        <br><br>
+        PASSIONFRUIT & MANGO SORBET
+        <br><br>
+        LIMONE (LEMON) SORBET
+      </p>
+    </div>
+
+    <br><br>
 
     <footer>
-        <p>This page was created and maintained by the EHS TSA chapter</p>
+      <p>This page was created and maintained by the EHS TSA chapter</p>
     </footer>
   </body>
 </html>
