--- a/menu.html
+++ b/menu.html
@@ -22,8 +22,9 @@
     
     <br>
     <br>
-    <h2 style = "margin-left: 15em;" class="section-title">Gelato Flavours</h2>
     <div  class = "menu">
+      <h2 style = "margin-left: 600px;" class="section-title">Gelato Flavours</h2>
+    
       <p>
         FIOR DI LATTE
         <br><br>
