finally fixed menu centering issue. I also have an idea on how to make it look good.

--- a/menu.html
+++ b/menu.html
@@ -22,8 +22,13 @@
     
     <br>
     <br>
+    <section class="diagonal_B">
+      <div class="wrapper">
+        <img style="margin-left: 100px;" id="process_img" class="box" src="process.jpg">
+      </div>
+    </section>
     <div  class = "menu">
-      <h2 style = "margin-left: 600px;" class="section-title">Gelato Flavours</h2>
+      <h2 class="section-title">Gelato Flavours</h2>
     
       <p>
         FIOR DI LATTE
