added image to menu

--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,7 @@
     <br>
     <section class="diagonal_B">
       <div class="wrapper">
-        <img style="margin-left: 100px;" id="process_img" class="box" src="process.jpg">
+        <img style="margin-left: 100px;" id="process_img" class="box" src="gelato_C.jpg">
       </div>
     </section>
     <div  class = "menu">
