updated menu with second image

--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,15 @@
     <br>
     <section class="diagonal_B">
       <div class="wrapper">
-        <img style="margin-left: 100px;" id="process_img" class="box" src="gelato_C.jpg">
+        <img style="margin-left: 100px;" id="menu_A_img" class="box" src="gelato_C.jpg">
+      </div>
+    </section>
+    <br>
+    <br>
+    <br>
+    <section class="diagonal_C">
+      <div class="wrapper">
+        <img style="margin-left: 500px;" id="menu_B_img" class="box" src="gelato_D.jfif">
       </div>
     </section>
     <div  class = "menu">
