fixed image issues with menu. Also updated contact page background color.

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@ h3 {
 
 </style>
 
-<body style="background:  linear-gradient(to top left, #ffffff 0%, #b74d51 100%);">
+<body style="background:  linear-gradient(to top left, #FFEFCB 0%, #CBA591 100%);">
     <div class= "mainform">
     <form>
 
