--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,7 @@
     <br>
     <section class="diagonal_B">
       <div class="wrapper">
-        <img style="margin-left: 100px;" id="menu_A_img" class="box" src="gelato_C.jpg">
+        <img style="margin-left: 20%;" id="menu_A_img" class="box" src="gelato_C.jpg">
       </div>
     </section>
     <br>
@@ -32,11 +32,19 @@
     <br>
     <section class="diagonal_C">
       <div class="wrapper">
-        <img style="margin-left: 300px;" id="menu_B_img" class="box" src="gelato_D.jfif">
+        <img style="margin-left: 50%;" id="menu_B_img" class="box" src="gelato_D.jfif">
       </div>
+      <br>
+      <br>
+      <br>
+    </section>
+    <section class="diagonal_D">
+        <div class="wrapper">
+          <img style="margin-left: 20%;" id="menu_C_img" class="box" src="coffee_A.jpg">
+        </div>
     </section>
     <div  class = "menu">
-      <h2 class="section-title">Gelato Flavours</h2>
+      <h2 class="section-title">Gelato</h2>
     
       <p>
         FIOR DI LATTE
@@ -72,6 +80,21 @@
         PASSIONFRUIT & MANGO SORBET
         <br><br>
         LIMONE (LEMON) SORBET
+      </p>
+      <br>
+      <br>
+      <h2 class="section-title">Coffee</h2>
+    
+      <p>
+        AMERICANO
+        <br><br>
+        LATTE
+        <br><br>
+        MOCHA
+        <br><br>
+        CAPPUCINNO
+        <br><br>
+        HOT CHOCOLATE
       </p>
     </div>
 
