--- a/about_us.html
+++ b/about_us.html
@@ -3,15 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="about_us.css">
         <title>Home</title>
     </head>
   <body>
     <div class="navbar">
         <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
-        <a href="contact.html" style = "background: #b74d51; color: #FFEFCB; font-weight: bold;">Contact</a>
-        <a href="about_us.html">About Us</a>
+        <a href="contact.html">Contact</a>
+        <a href="about_us.html"  style = "background: #b74d51; color: #FFEFCB; font-weight: bold;">About Us</a>
         <a href="documentation.html">Documentation</a>
     </div>
+
+    <br>
+    <br>
+
+    <h1>About Us</h1>
+    
+    <br>
+    <br>
+    </body>
 </html>
