Started About Us page

--- a/about_us.html
+++ b/about_us.html
@@ -19,8 +19,32 @@
     <br>
 
     <h1>About Us</h1>
-    
     <br>
     <br>
+
+    <section class="diagonal">
+        <div class="wrapper">
+
+            <h2 class="section-title">Our Story</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        </div>
+      </section>
+    <br>
+    <br>
+
+    <div class="about_us_grid">
+        <div class="box">Elijah</div>
+        <div class="box">Sawyer</div>
+        <div class="box">Evan</div>
+        <div class="box">Alex</div>
+    </div>
+    <br>
+    <br>
+    <br>
+
+      <footer>
+        <p>This page was created and maintained by the EHS TSA chapter</p>
+    </footer>
     </body>
 </html>
