--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@ h3 {
      
     <br>
     <br>
-    <!-- Category of complaint-->
+    <!-- Category-->
     
     <div id="formsection">
         <label><b>Contact Reason</b></label>
@@ -135,9 +135,9 @@ h3 {
       </div>
 
     <br>
-    <!-- Complaint Details-->
+    <!-- Details -->
 
-    <label for="subject"><b>Complaint Details:</b></label>
+    <label for="subject"><b>Details:</b></label>
     <textarea id="subject" name="subject" placeholder="Tell us more!" style="height:200px"></textarea>
 
 
