finished about us

--- a/documentation.html
+++ b/documentation.html
@@ -10,8 +10,19 @@
     <div class="navbar">
         <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
-        <a href="contact.html" style = "background: #b74d51; color: #FFEFCB; font-weight: bold;">Contact</a>
+        <a href="contact.html">Contact</a>
         <a href="about_us.html">About Us</a>
-        <a href="documentation.html">Documentation</a>
+        <a href="documentation.html" style = "background: #b74d51; color: #FFEFCB; font-weight: bold;">Documentation</a>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <center>
+        <embed src="work_log.pdf" width="50%" height="800px">
+    </center>
+
 </html>
