--- a/about_us.html
+++ b/about_us.html
@@ -25,7 +25,7 @@
     <section class="diagonal">
         <div class="wrapper">
 
-            <h2 class="section-title">Our Story</h2>
+            <h2 class="section-title" style="font-size: 2.15rem;">Our Story</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
         </div>
@@ -34,10 +34,26 @@
     <br>
 
     <div class="about_us_grid">
-        <div class="box">Elijah</div>
-        <div class="box">Sawyer</div>
-        <div class="box">Evan</div>
-        <div class="box">Alex</div>
+      <div class="box">
+        <h2 class="section-title" style="margin-left: -20%;">Elijah Piazza</h2>
+        <img src="mallard.jpeg" alt="Mallard Duck">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="box">
+        <h2 class="section-title" style="margin-left: -20%;">Sawyer McAlhany</h2>
+        <img src="mallard.jpeg" alt="Mallard Duck">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="box">
+        <h2 class="section-title" style="margin-left: -20%;">Steven Wittman</h2>
+        <img src="mallard.jpeg" alt="Mallard Duck">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="box">
+        <h2 class="section-title" style="margin-left: -20%;">Alex Stuart</h2>
+        <img src="mallard.jpeg" alt="Mallard Duck">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
     </div>
     <br>
     <br>
