Added Documentation, linked form to notes

--- a/documentation.html
+++ b/documentation.html
@@ -23,6 +23,14 @@
     <br>
     <center>
         <embed src="work_log.pdf" width="50%" height="800px">
+        <h4>Attribution</h4>
+        <body>
+            process.jpg, star5112, "Making gelato", https://www.flickr.com/photos/johnjoh/954831622/in/photostream/ CC BY-SA 2.0, https://creativecommons.org/licenses/by-sa/2.0/
+            <br>
+            gelato_B.jpg, This image is from Pixabay and was published prior to July 2017 under the Creative Commons CC0 1.0 Universal Public Domain Dedication license https://web.archive.org/web/20161229043156/https://pixabay.com/en/service/terms/ . In July 2017, Pixabay switched the old sitewide license for all uploads from Creative Commons CC0 to a custom license arrangement that does not meet the Creative Commons CC0 1.0 Universal Public Domain Dedication license terms.
+            <br>
+            gelato_C.jpg, stu_spivack, "I'm getting tired of saying gelato instead of "ice cream."", https://www.flickr.com/photos/stuart_spivack/183088194, CC BY-SA 2.0, https://creativecommons.org/licenses/by-sa/2.0/  
+        </body>
     </center>
 
 </html>
