Added logos to pages (and various improvements)

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,17 @@
     </div>
 </html>
 
+<br>
+<center>
+    <img id= "logo" src="contact.PNG">
+</center>
+<br>
+
+<br>
 <center>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfdzfPCo-S9iovK_yOPTTTGDc7y8BMUtRF0c6ORQiI0Ad6hbw/viewform?embedded=true" width="640" height="1624" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </center>
+<br>
+
+
 </body>
