--- a/documentation.html
+++ b/documentation.html
@@ -19,6 +19,13 @@
     <br>
     <br>
     <br>
+    <center>
+      <img id= "logo" src="Documentation.PNG">
+    </center>
+    <br>
+    <br>
+    <br>
+    <br>
     <br>
     <br>
     <center>
