--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <br>
     <br>
-
-    <h1>Title Banner here</h1>
-    
+    <center>
+    <img id= "logo" src="index.PNG">
+    </center>
     <br>
     <br>
 
