--- a/about_us.html
+++ b/about_us.html
@@ -17,9 +17,9 @@
 
     <br>
     <br>
-
-    <h1>About Us</h1>
-
+    <center>
+      <img id= "logo" src="about.PNG">
+    </center>
     <br>
     <br>
 
