--- a/menu.html
+++ b/menu.html
@@ -17,9 +17,9 @@
 
     <br>
     <br>
-
-    <h1 style = "font-size: 50px;" >Menu</h1>
-    
+    <center>
+      <img id= "logo" src="Menu.PNG">
+    </center>
     <br>
     <br>
 
