--- a/menu.html
+++ b/menu.html
@@ -67,9 +67,9 @@
         <br><br>
        Passion Fruit
         <br><br>
-        GReen APPLE
+        GREEN APPLE
         <br><br>
-        Banana 
+        BANANA
         <br><br>
         ESPRESSO <sup>2</sup>    <sup>3</sup>
         <br><br>
